@@ -2,11 +2,12 @@ package cn.z.spring.util;
 
 import cn.z.util.EasyExcelUtils;
 import com.alibaba.excel.EasyExcelFactory;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
 
@@ -32,7 +33,7 @@ public class EasyExcelSpringUtils extends EasyExcelUtils {
      * @param clazz    T.class
      */
     public static <T> void download(HttpServletResponse response, String name, List<T> data, Class<T> clazz) throws IOException {
-        name = URLEncoder.encode(name + LocalDateTime.now().format(DATETIME_FORMAT), "UTF-8").replace("\\+", "%20");
+        name = URLEncoder.encode(name + LocalDateTime.now().format(DATETIME_FORMAT), StandardCharsets.UTF_8).replace("\\+", "%20");
         response.setContentType("application/octet-stream;charset=utf-8");
         response.setHeader("Content-Disposition", "attachment;filename*=utf-8''" + name + ".xlsx");
         EasyExcelFactory.write(response.getOutputStream(), clazz).registerWriteHandler(style1()).sheet("工作表1").doWrite(data);
